# rust-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: data.sql  db.sql
src/: database.rs  helpers.rs  main.rs  schema.rs
src/handlers/: users.rs
src/services/: jwt.rs  mod.rs  password.rs  users.rs
src/types/: handler_result.rs  mod.rs  user.rs
