[package]
name = "rust-api"
version = "0.1.0"
authors = ["alexanderbanks <alex.banks0@gmail.com>"]

[dependencies]
iron = "0.5.1"
router = "0.5.1"
time = "0.1.38"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
bcrypt = "0.1"
rand = "0.3"
bodyparser = "0.7.0"
frank_jwt = "2.5.1"
